objects/Scheduled_Data_Pull_from_YL_to_SF__c.object
<CustomObject>
    <description>Used for scheduling data pulls from Yodle Live into Salesforce to update data</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <label>Batch Size</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SOQL_Criteria__c</fullName>
        <inlineHelpText>SOQL to be used to determine which Salesforce records to update.</inlineHelpText>
        <label>SOQL Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Class_to_Invoke__c</fullName>
        <inlineHelpText>Supported classes to be invoked</inlineHelpText>
        <label>Class to Invoke</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YodleLiveSyncClientEngagementDataHelper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Scheduled Data Pull from YL to SF</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Scheduled Data Pull from YL to SF Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduled Data Pulls from YL to SF</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>